--- a/styles/animations.css
+++ b/styles/animations.css
@@ -9,3 +9,115 @@
 ✦ button__text — для обозначения текстового элемента внутри кнопки
 
 */
+.like-icon .contour {
+transition: fill 0.1s linear;
+}
+
+.like-icon .core {
+ transition: fill 0.3s 0.03s;
+}
+
+.like-icon .main-body {
+ transition: fill 0.3s 0s;
+}
+
+.like-icon .sparks {
+  opacity: 0;
+  fill: var(--heart-core);
+}
+
+.card__icon-button:hover .core {
+  fill: var(--heart-hover);
+  transition-delay: 0s;
+}
+
+.card__icon-button:hover .main-body {
+  fill: var(--heart-hover);
+  transition-delay: 0.05s;
+}
+
+.card__icon-button:active .core {
+  fill: var(--heart-core);
+  transition-delay: 0s;
+}
+
+.card__icon-button:active .main-body {
+  fill: var(--heart-core);
+  transition-delay: 0.05s;
+}
+
+.like-icon.is-liked .core {
+  fill: var(--heart-core);
+  transition-delay: 0s;
+}
+
+.like-icon.is-liked .main-body {
+  fill: var(--heart-core);
+  transition-delay: 0.05s;
+}
+
+.like-icon.is-liked .contour {
+  fill: var(--heart-core);
+  transition: fill 0.3s linear 0.06s;
+}
+
+.like-icon.is-liked .heart {
+  animation: scale-heart 0.3s ease-in 0.1s both;
+  transform-origin: center;
+}
+
+.like-icon.is-liked .sparks {
+  animation: sparks 0.3s ease-in 0.3s both;
+}
+
+.like-icon:hover .core {
+  transition: fill 0.3s 0s;
+}
+
+.like-icon:hover .main-body {
+  transition: fill 0.3s 0.05s;
+}
+
+.like-icon:active .core {
+  transition: fill 0.3s 0s;
+}
+
+.like-icon:active .main-body {
+  transition: fill 0.3s 0.05s;
+}
+
+.like-icon.is-liked .core {
+  transition: fill 0.3s 0s;
+}
+
+.like-icon.is-liked .main-body {
+  transition: fill 0.3s 0.03s;
+}
+
+.like-icon.is-liked .contour {
+  transition: fill 0.3s 0.06s;
+}
+
+@keyframes scale-heart {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1.25);
+  }
+}
+
+@keyframes sparks {
+  0% {
+    opacity: 0;
+    transform: scale(0);
+  }
+  50% {
+    opacity: 1;
+    transform: scale(1);
+  }
+  100% {
+    opacity: 0;
+    transform: scale(1.5);
+  }
+}
