--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,1 +1,38 @@
-/* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
+:root {
+  --main-font: 'Inter', system-ui, -apple-system, 'Segoe UI', Roboto, Arial, sans-serif;
+  --accent-font: 'Press Start 2P', system-ui, -apple-system, 'Segoe UI', Roboto, Arial, sans-serif;
+  --text-weight: 400;
+  --title-weight: 700;
+  --container-width: clamp(375px, 100%, 700px);
+  --logo-font-size: clamp(49px, 13.06vw, 64px);
+  --subtitle-font-size: clamp(14px, 3.73vw, 20px);
+ --header-padding-top: clamp(120px, 32vw, 150px);
+ --white-box-padding: 20px;
+ --stroke-color: #fff;
+ --accent-color: #000;        
+  --button-text-color: #fff;
+  --grid-gradient: 
+    repeating-linear-gradient(
+      90deg,
+      #d3d3d3 0px,
+      #d3d3d3 1px,
+      transparent 1px,
+      transparent 2px
+    ),
+    repeating-linear-gradient(
+      0deg,
+      #d3d3d3 0px,
+      #d3d3d3 1px,
+      transparent 1px,
+      transparent 2px
+    ),
+    linear-gradient(
+      to bottom,
+      #e7e7e7 0.01%,
+      #1a1a1a 100%
+    );
+  --heart-contour: #000;
+  --heart-core: #FF0000;
+  --heart-main: #FF0000;
+  --heart-hover: #000;
+}
