--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,7 +1,6 @@
 @font-face {
   font-family: 'PressStart2P';
-  src:
-    url('./PressStart2P-Regular.woff') format('woff');
+  src: url('./fonts/PressStart2P-Regular.woff') format('woff');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -9,9 +8,8 @@
 
 @font-face {
   font-family: 'Inter';
-  src:
-    url('./Inter-Variable.woff2') format('woff2');
-  font-weight: 400 700;
+  src: url('./fonts/Inter-Variable.woff2') format('woff2-variations');
+  font-weight: 400 785; 
   font-style: normal;
   font-display: swap;
 }
