--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -8,8 +8,8 @@
 
 @font-face {
   font-family: 'Inter';
-  src: url('./fonts/Inter-Variable.woff2') format('woff2-variations');
-  font-weight: 400 785; 
+  src: url('./fonts/Inter-Variable.woff2') format('woff2');
+  font-weight: 400 785;
   font-style: normal;
   font-display: swap;
 }
