--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,15 +1,17 @@
 @font-face {
   font-family: 'PressStart2P';
-  src: url('./fonts/PressStart2P-Regular.woff') format('woff');
-  font-weight: 400;
+  src: url('./fonts/PressStart2P-Regular.woff2') format('woff2');
+  font-weight: 400 785;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
   font-family: 'Inter';
-  src: url('./fonts/Inter-Variable.woff2') format('woff2');
-  font-weight: 400 785;
+  src: 
+    url('./fonts/Inter-Variable.woff2') format('woff2-variations'),
+    url('./fonts/Inter-Variable.woff2') format('woff2');
+  font-weight: 100 900;
   font-style: normal;
   font-display: swap;
 }
