--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -9,6 +9,7 @@
 @font-face {
   font-family: 'Inter';
   src: 
+    url('./fonts/Inter-Variable.woff2') format('woff2 supports variations'),
     url('./fonts/Inter-Variable.woff2') format('woff2-variations');
   font-weight: 400 785;
   font-style: normal;
