--- a/styles/style.css
+++ b/styles/style.css
@@ -218,8 +218,6 @@ body {
   white-space: nowrap;
   position: relative;
   z-index: 1;
-  mix-blend-mode: normal;
-  color: inherit;
 }
 
 .save-button:hover,
@@ -384,6 +382,7 @@ body {
   .card__image-container {
     min-height: 696px;
   }
+
   .card_content__title {
     white-space: nowrap;
     overflow: hidden;
@@ -403,7 +402,7 @@ body {
     height: 44px;
   }
 
-  .content__save-button {
+  .save-button {
     flex-direction: row;
     width: auto;
     min-width: 335px;
